# crossplane

./: Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: crossplane-ci.yml
crossplane/: __init__.py
tests/: test_parse.py
